--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,14 @@
 {
-    "presets": [
-        "@babel/preset-react",
-        "@babel/preset-typescript",
-        "@babel/preset-env"
-    ],
-    "plugins": [
-        "@emotion"
+  "presets": [
+    "@babel/preset-react",
+    "@babel/preset-typescript",
+    [
+      "@babel/preset-env",
+      {
+        "corejs": "3.8",
+        "useBuiltIns": "usage"
+      }
     ]
+  ],
+  "plugins": ["@emotion"]
 }
