--- a/package.json
+++ b/package.json
@@ -1,55 +1,67 @@
 {
   "name": "id3-tag-editor",
-  "main": "dist/main.bundle.js",
+  "main": "dist/main.js",
   "version": "0.1.0",
   "scripts": {
     "start": "ts-node webpack.devServer.ts",
-    "build": "cross-env NODE_ENV=production run-p build:main build:renderer && electron-builder",
+    "build": "run-s build:all && electron-packager ./ --out=releases --overwrite",
+    "build:all": "rm -rf ./dist && cross-env NODE_ENV=production run-p build:main build:renderer",
     "build:main": "webpack --config webpack.main.config.ts",
     "build:renderer": "webpack --config webpack.renderer.config.ts",
-    "postinstall": "electron-builder install-app-deps"
-  },
-  "build": {
-    "appId": "id3-tag-editor",
-    "mac": {
-      "category": "music"
-    },
-    "files": [
-      "./dist/**/*"
-    ]
+    "test": "jest test/unit/*.test.tsx --coverage",
+    "e2e": "run-s build:all && jest test/e2e/*.test.ts"
   },
   "dependencies": {
-    "@emotion/react": "^11.1.4",
+    "@emotion/cache": "^11.1.3",
+    "@emotion/react": "^11.1.5",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/preset-typescript": "^7.12.7",
+    "@babel/core": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-typescript": "^7.12.13",
     "@emotion/babel-plugin": "^11.1.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@testing-library/react": "^11.2.5",
     "@types/electron-devtools-installer": "^2.2.0",
-    "@types/react": "^17.0.0",
+    "@types/jest": "^26.0.20",
+    "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "@types/terser-webpack-plugin": "^5.0.2",
+    "@types/webpack-bundle-analyzer": "^3.9.0",
     "@types/webpack-dev-server": "^3.11.1",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
     "babel-loader": "^8.2.2",
+    "core-js": "^3.8.3",
     "cross-env": "^7.0.3",
-    "electron": "^11.2.1",
-    "electron-builder": "^22.9.1",
+    "electron": "^11.2.3",
     "electron-connect": "^0.6.3",
     "electron-devtools-installer": "^3.1.1",
+    "electron-packager": "^15.2.0",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
-    "html-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "^5.0.0",
+    "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.2.1",
     "react-refresh": "^0.9.0",
+    "spectron": "^13.0.0",
+    "terser-webpack-plugin": "^5.1.1",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.1.3",
-    "webpack": "^5.17.0",
-    "webpack-cli": "^4.4.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^5.21.1",
+    "webpack-bundle-analyzer": "^4.4.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   }
 }
