--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.12.13",
     "@emotion/babel-plugin": "^11.1.2",
+    "@emotion/eslint-plugin": "^11.0.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@testing-library/react": "^11.2.5",
     "@types/electron-devtools-installer": "^2.2.0",
@@ -31,10 +32,10 @@
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "@types/terser-webpack-plugin": "^5.0.2",
-    "@types/webpack-bundle-analyzer": "^3.9.0",
+    "@types/webpack-bundle-analyzer": "^3.9.1",
     "@types/webpack-dev-server": "^3.11.1",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
     "babel-loader": "^8.2.2",
     "core-js": "^3.8.3",
     "cross-env": "^7.0.3",
@@ -58,7 +59,7 @@
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.1.3",
-    "webpack": "^5.21.1",
+    "webpack": "^5.21.2",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
