--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "id3-tag-editor",
+  "name": "electron-typescript-react-starter",
+  "description": "A custom built electron typescript and react webpack build",
   "main": "dist/main.js",
   "version": "0.1.0",
   "scripts": {
-    "start": "ts-node webpack.devServer.ts",
+    "dev": "ts-node webpack.devServer.ts",
     "build": "run-s build:all && electron-packager ./ --out=releases --overwrite",
     "build:all": "rm -rf ./dist && cross-env NODE_ENV=production run-p build:main build:renderer",
     "build:main": "webpack --config webpack.main.config.ts",
@@ -16,7 +17,12 @@
     "@emotion/react": "^11.1.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
@@ -31,6 +37,7 @@
     "@types/jest": "^26.0.20",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
     "@types/terser-webpack-plugin": "^5.0.2",
     "@types/webpack-bundle-analyzer": "^3.9.1",
     "@types/webpack-dev-server": "^3.11.1",
