--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,8 +18,7 @@
     }
   },
   "rules": {
-    "@typescript-eslint/no-var-requires": 0,
-    "@typescript-eslint/no-explicit-any": 0,
+    "react/prop-types": 0,
     "@emotion/jsx-import": "error",
     "@emotion/no-vanilla": "error",
     "@emotion/import-from-emotion": "error",
