--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "build:all": "rm -rf ./dist && cross-env NODE_ENV=production run-p build:main build:renderer",
     "build:main": "webpack --config webpack.main.config.ts",
     "build:renderer": "webpack --config webpack.renderer.config.ts",
-    "test": "jest test/unit/*.test.tsx --coverage",
-    "e2e": "run-s build:all && jest test/e2e/*.test.ts"
+    "test": "jest src/**/*.test.tsx --coverage",
+    "e2e": "run-s build:all && jest test/*.test.ts"
   },
   "dependencies": {
     "@emotion/cache": "^11.1.3",
     "@emotion/react": "^11.1.5",
-    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
