Windows build fixes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,9 @@
     "@emotion/no-vanilla": "error",
     "@emotion/import-from-emotion": "error",
     "@emotion/styled-import": "error",
-    "@emotion/pkg-renaming": "error"
+    "@emotion/pkg-renaming": "error",
+    "prettier/prettier": ["error", {
+      "endOfLine": "auto"
+    }]
   }
 }
