--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:preload": "webpack --config webpack.preload.config.ts",
     "build:renderer": "webpack --config webpack.renderer.config.ts",
     "test": "jest src/**/*.test.{ts,tsx} --coverage",
-    "e2e": "run-s build:all && jest src/**/*.e2e.{ts,tsx}"
+    "e2e": "jest src/**/*.e2e.{ts,tsx}"
   },
   "dependencies": {
     "@emotion/cache": "^11.1.3",
@@ -25,40 +25,39 @@
     "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
+    "@babel/core": "^7.13.1",
+    "@babel/preset-env": "^7.13.5",
     "@babel/preset-react": "^7.12.13",
-    "@babel/preset-typescript": "^7.12.13",
-    "@emotion/babel-plugin": "^11.1.2",
-    "@emotion/eslint-plugin": "^11.0.0",
+    "@babel/preset-typescript": "^7.13.0",
+    "@emotion/babel-plugin": "^11.2.0",
+    "@emotion/eslint-plugin": "^11.2.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.7.1",
     "@types/electron-devtools-installer": "^2.2.0",
     "@types/jest": "^26.0.20",
-    "@types/react": "^17.0.1",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "@types/react-redux": "^7.1.16",
     "@types/terser-webpack-plugin": "^5.0.2",
     "@types/webpack-bundle-analyzer": "^3.9.1",
     "@types/webpack-dev-server": "^3.11.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
     "babel-loader": "^8.2.2",
-    "core-js": "^3.8.3",
+    "core-js": "^3.9.0",
     "cross-env": "^7.0.3",
-    "electron": "^11.2.3",
+    "electron": "^11.3.0",
     "electron-connect": "^0.6.3",
     "electron-devtools-installer": "^3.1.1",
     "electron-packager": "^15.2.0",
-    "eslint": "^7.19.0",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-jest": "^24.1.5",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "fork-ts-checker-webpack-plugin": "^6.1.0",
-    "html-webpack-plugin": "^5.0.0",
+    "html-webpack-plugin": "^5.2.0",
     "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
@@ -68,8 +67,8 @@
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
-    "typescript": "^4.1.3",
-    "webpack": "^5.21.2",
+    "typescript": "4.1.5",
+    "webpack": "^5.24.2",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
