--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build:main": "webpack --config webpack.main.config.ts",
     "build:preload": "webpack --config webpack.preload.config.ts",
     "build:renderer": "webpack --config webpack.renderer.config.ts",
-    "test": "jest src/**/*.test.{ts,tsx} --coverage",
-    "e2e": "run-s build:all && jest src/**/*.e2e.{ts,tsx}"
+    "test": "jest src/**/*.test.{ts,tsx} --coverage"
   },
   "dependencies": {
     "@emotion/cache": "^11.1.3",
@@ -64,7 +63,6 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "react-refresh": "^0.9.0",
-    "spectron": "^13.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
